2003-01-03 Ronald Oussoren <oussoren@cistron.nl>
    * Added methods to objc/_convenience that allow us to use 
      NSArray.arrayWithObjects_ and other varargs constructors (by calling
      non-varargs versions under the hood)

2003-01-03  Bill Bumgarner  <bbum@codefab.com>
    * Scripts/runalltests: also check to make sure file ends with '.py' (to
      avoid '.py~' files.
    * Modules/Cocoa/_FoundationMapping.m: Started moving the various class
      specific method registrations to separate source files but static
      variables defeated me.  
    * Lib/Foundation/test/test_nsdata.py: Added test for NSData class cluster
      (including NSMutableData).   Refined tests a bit;  test for more
      conditions and for situations that should raise an exception.
    * NSData: Added support for -bytes.
    * NSMutableData: Added support for mutableBytes
    * NSData: Added support for +dataWithBytes:length:

2003-01-01  Bill Bumgarner  <bbum@codefab.com>

    * Project Templates/Cocoa-Python Application/bin-python-main.m: Added
    Cocoa/Cocoa.h in hopes that it'll fix indexing.

    * Project Templates/Cocoa-Python
    Application/CocoaApp.pbproj/TemplateInfo.plist: Added __main__.py,
    removed Main.py

    * Examples/CurrencyConverter/00README.txt: Created a simple README
    describing how to build the CurrencyConverter example.s a

    * Examples/addressbook.py (me): Checked to make sure there is really a
    'me' card in the address book.  If the user hadn't marked a card as 'This
    is my card', the script tossed an exception.

2002-12-23 Ronald Oussoren <oussoren@cistron.nl>
    * Automaticly convert 'self' argument to Objective-C if it is a Python
      string, or int (just like for other arguments). This allows calls like
      >>> NSString.localizedCaseInsensitiveCompare_('foo','bar')
     
2002-12-22 Ronald Oussoren <oussoren@cistron.nl>
    * Introduce support for libffi. For now the only advantages are a faster
      build and smaller libraries.
